tests/errors/substructural/composition/enum_drop_with_out_ref_payload.sim

            enum Bad: Drop { A: &out i64 }
            